--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!-- <app-fournisseur></app-fournisseur>
 <app-list-fournisseur></app-list-fournisseur>
 <app-list-produits></app-list-produits> -->
-
-<nav>
+<app-list-produits></app-list-produits>
+<!-- <nav>
     <ul>
       <li><a routerLink="/invoice-management">Invoice Management</a></li>
     </ul>
-  </nav>
+  </nav> -->
   <router-outlet></router-outlet>
   
